clusters/stage/vanitydomain/vanitydomain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanitydomain-ingress
spec:
  tls:
  - hosts:
    - www.sg.1a4.co
    secretName: vanitydomain-tls
  ingressClassName: nginx
  rules:
    - host: www.sg.1a4.co
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vanitydomain
                port:
                  number: 80
